public abstract class Actionneur {
    abstract void chauffer(Four f);

    abstract void refroidir(Four f);
}
