public class CapteurTemperature {
    public float lireTemperature(Four f) {
        return f.getTemperature();
    }
}
